fix navbar alignment / major conflicts resolved / all branches merged / minor styling remain

--- a/styles/confirmation.scss
+++ b/styles/confirmation.scss
@@ -6,6 +6,7 @@ body {
   background-size: cover;
   background-position: center center;
   background-color: blue;
+  margin-top: 50px;
 }
 
 .item-img {
